# data-engineering-exercises

./: .gitignore
0501_titanic-etl-taskflow/: README.md
0501_titanic-etl-taskflow/dags/: titanic.csv  titanic_etl.py
0502_airflow_snowflake/: 01_weather_to_snowflake_etl.py  02_olist_to_snowflake_etl.py  README.md  olist_to_snowflake_etl.py  pyproject.toml  weather_to_snowflake_etl.py
0503-0504_snowflake_dbt/: README.md  example.env
0503-0504_snowflake_dbt/sf_dbt_project/: dbt_project.yml
0503-0504_snowflake_dbt/sf_dbt_project/models/: schema.yml  sources.yml
0503-0504_snowflake_dbt/sf_dbt_project/models/marts/: fact_product_performance.sql  fact_seller_performance.sql
0503-0504_snowflake_dbt/sf_dbt_project/models/staging/: stg_customers.sql  stg_order_items.sql  stg_products.sql
0503_snowflake_dbt/: README.md  pyproject.toml
0503_snowflake_dbt/sf_dbt_project/: dbt_project.yml
0503_snowflake_dbt/sf_dbt_project/models/: schema.yml  sources.yml
0503_snowflake_dbt/sf_dbt_project/models/marts/: fact_orders_geography.sql
0503_snowflake_dbt/sf_dbt_project/models/staging/: stg_orders.sql
0503_snowflake_dbt/sf_dbt_project/tests/: cnt_distinct_customer_non_negative.sql  cnt_distinct_order_non_negative.sql
